💄 sorts blogposts by newest + colorchange of link

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -7,7 +7,7 @@ import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 
 const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
 ---
 
@@ -28,8 +28,8 @@ const posts = (await getCollection('blog')).sort(
 				font-style: italic;
 				color: #595959;
 			}
-			ul li a:visited {
-				color: #8e32dc;
+			ul li a {
+				color: #815B5B;
 			}
 		</style>
 	</head>
