--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,23 +3,14 @@ import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../consts';
 ---
 
-<header>
-	<h2>
+<header class="flex justify-center gap-24 mb-12">
+	<a class="font-bold" href="/">
 		{SITE_TITLE}
-	</h2>
+	</a>
 	<nav>
-		<HeaderLink href="/">Home</HeaderLink>
-		<HeaderLink href="/blog">Blog</HeaderLink>
-		<HeaderLink href="/about">About</HeaderLink>
-		<HeaderLink href="https://twitter.com/astrodotbuild" target="_blank">Twitter</HeaderLink>
-		<HeaderLink href="https://github.com/withastro/astro" target="_blank">GitHub</HeaderLink>
+		<HeaderLink href="/about">about</HeaderLink>
+		<HeaderLink href="/projects">projects</HeaderLink>
+		<HeaderLink href="/resume">resume</HeaderLink>
+		<HeaderLink href="/blog">blog</HeaderLink>
 	</nav>
 </header>
-<style>
-	header {
-		margin: 0em 0 2em;
-	}
-	h2 {
-		margin: 0.5em 0;
-	}
-</style>
