💄 changing colors for entire site

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,11 +9,11 @@ body {
 	padding: 20px;
 	max-width: 65ch;
 	text-align: left;
-	background-color: #fff;
+	background-color: #FFF8EA;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	line-height: 1.5;
-	color: #444;
+	color: #815B5B;
 }
 h1,
 h2,
