--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,12 +2,6 @@
 const today = new Date();
 ---
 
-<footer>
+<footer class="flex justify-center fixed w-screen bottom-0 p-4">
 	{today.getFullYear()} &copy; Sindre Kjelsrud.
 </footer>
-<style>
-	footer {
-		padding: 25px;
-		text-align: center;
-	}
-</style>
