--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -19,6 +19,6 @@ const isActive = href === pathname || href === pathname.replace(/\/$/, '');
 	}
 	a.active {
 		font-weight: bolder;
-		text-decoration: underline;
+		border-bottom: 2px solid;
 	}
 </style>
