--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../consts';
+import ThemeIcon from './ThemeIcon.astro';
 ---
 
 <header class="flex justify-center gap-64">
@@ -8,6 +9,7 @@ import { SITE_TITLE } from '../consts';
 		<a class="font-bold" href="/">
 			{SITE_TITLE}
 		</a>
+		<ThemeIcon />
 	</div>
 	<nav>
 		<HeaderLink href="/about">about</HeaderLink>
