--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,12 +9,12 @@ import ThemeIcon from './ThemeIcon.astro';
 		<a class="font-bold" href="/">
 			{SITE_TITLE}
 		</a>
-		<ThemeIcon />
 	</div>
-	<nav>
+	<nav class="flex gap-2">
 		<HeaderLink href="/about">about</HeaderLink>
 		<HeaderLink href="#">projects</HeaderLink>
 		<HeaderLink href="#">resume</HeaderLink>
 		<HeaderLink href="/blog">blog</HeaderLink>
+		<ThemeIcon />
 	</nav>
 </header>
