💄 fixed up a bit of styling on about- & blogpage

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,30 +11,14 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
-		<div class="flex flex-col fixed w-screen">
+		<div class="flex flex-col fixed w-screen p-5">
 			<Header title={SITE_TITLE} />
-			<main class="flex flex-col justify-center items-left mx-80">
-				<h1>About Me</h1>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-					labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo
-					viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam
-					adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus
-					et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus
-					vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque
-					sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
-				</p>
-			
-				<p>
-					Morbi tristique senectus et netus. Id semper risus in hendrerit gravida rutrum quisque non
-					tellus. Habitasse platea dictumst quisque sagittis purus sit amet. Tellus molestie nunc non
-					blandit massa. Cursus vitae congue mauris rhoncus. Accumsan tortor posuere ac ut. Fringilla urna
-					porttitor rhoncus dolor. Elit ullamcorper dignissim cras tincidunt lobortis. In cursus turpis
-					massa tincidunt dui ut ornare lectus. Integer feugiat scelerisque varius morbi enim nunc.
-					Bibendum neque egestas congue quisque egestas diam. Cras ornare arcu dui vivamus arcu felis
-					bibendum. Dignissim suspendisse in est ante in nibh mauris. Sed tempus urna et pharetra pharetra
-					massa massa ultricies mi.
-				</p>
+			<main class="flex flex-col justify-center items-left mx-auto mt-8">
+				<h1 class="text-2xl">About me</h1>
+                <p>Some information about me & stuff I like</p>
+				<div class="mt-4">
+					<a href="/tools">link to tools</a>
+				</div>
 			</main>
 			<Footer />
 		</div>
