--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -34,10 +34,11 @@ const posts = (await getCollection('blog')).sort(
 		</style>
 	</head>
 	<body>
-		<div class="flex flex-col fixed w-screen">
+		<div class="flex flex-col fixed w-screen p-5">
 			<Header />
-			<main class="flex flex-col justify-center items-left mx-80">
-				<section>
+			<main class="flex flex-col justify-center items-left mx-auto mt-8">
+				<h1 class="text-2xl">Blog posts</h1>
+				<section class="mt-4">
 					<ul>
 						{
 							posts.map((post) => (
