--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 const today = new Date();
 ---
 
-<footer class="flex justify-center fixed w-screen bottom-0 p-4">
+<footer class="flex justify-center fixed w-screen bottom-0 p-4 footerbg">
 	{today.getFullYear()} &copy; Sindre Kjelsrud.
 </footer>
