:lipstick: fix a bit of styling across page (about, index etc.)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import { SITE_TITLE } from '../consts';
 import ThemeIcon from './ThemeIcon.astro';
 ---
 
-<header class="flex justify-center gap-64">
+<header class="flex justify-center mx-auto md:gap-64 gap-4 py-5">
 	<div>
 		<a class="font-bold" href="/">
 			{SITE_TITLE}
