--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,10 +11,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
-		<div class="flex flex-col fixed w-screen p-5">
+		<div class="flex flex-col fixed w-screen">
 			<Header title={SITE_TITLE} />
-			<main class="flex flex-col justify-center items-left mx-auto mt-8">
-				<h1 class="text-2xl">About me</h1>
+			<main class="flex flex-col justify-center items-left mx-auto">
+				<h1 class="text-4xl font-extrabold">About me</h1>
                 <p>Some information about me & stuff I like</p>
 				<div class="mt-4">
 					<a href="/tools">link to tools</a>
