--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,13 +15,12 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
-		<div class="flex flex-col fixed w-screen p-5">
+		<div class="flex flex-col fixed w-screen">
 			<Header title={SITE_TITLE} />
-			<main class="flex flex-col justify-center items-center p-48 description gap-4">
-				<!--<img class="w-40 rounded-full" src="/assets/pb.jpg" alt="Profile picture of me.">-->
+			<main class="flex flex-col justify-center items-center text-center pt-48 description gap-4">
 				<div class="profile"></div>
 				<h1 class="text-3xl font-bold">Sindre Kjelsrud</h1>
-				<p class="max-w-md">
+				<p class="md:max-w">
 					Student at Western University of Applied Sciences.
 				</p>
 				<div class="flex gap-1 social">
