--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,26 +1,14 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import SectionContainer from '../components/SectionContainer.astro';
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<div class="flex flex-col fixed w-screen">
-			<Header title={SITE_TITLE} />
-			<main class="flex flex-col justify-center items-left mx-auto">
-				<h1 class="text-4xl font-extrabold">About me</h1>
-                <p>Some information about me & stuff I like</p>
-				<div class="mt-4">
-					<a href="/tools">link to tools</a>
-				</div>
-			</main>
-			<Footer />
-		</div>
-	</body>
-</html>
+<SectionContainer>
+	<main class="mb-auto break-words mt-4">
+		<h1 class="text-4xl font-extrabold">About me</h1>
+		<p>Some information about me & stuff I like</p>
+		<a href="/tools">link to tools</a>
+		<p>
+			sidojdjosajoidsajaiodoaisoiasdosiadjoiaskflsdmklmdfsmlkfdskmdjdoasijsadkldsanlndsalnasdnlksadnklsdnlkdoasjdoasidjaoisjdoiasjdoasijdoiasjdoaijdio flex justify-center mx-auto md:gap-64 gap-4 py-5
+		</p>
+	</main>
+</SectionContainer>
