:lipstick: fixing styling on frontpage, footer & header

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 const today = new Date();
 ---
 
-<footer class="flex justify-center w-full py-5 fixed bottom-0 footerbg">
+<footer class="flex justify-center py-5 footerbg">
 	{today.getFullYear()} &copy; Sindre Kjelsrud.
 </footer>
