--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -98,3 +98,10 @@ body {
 .blogtime { color: var(--light-2); }
 
 .dark .blogtime { color: var(--dark-2); }
+
+/* RANDOM */
+code {
+	display: block;
+	border-radius: 10px;
+	padding: 20px;
+}
