:lipstick: catppuccin darkmode <3

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,11 +4,11 @@
 	--light-2: #815B5B;
 	--light-3: #9E7676;
 	--light-hover: #DAC0A3;
-	--dark-bg: #27374D;
-	--dark-1: #DDE6ED;
-	--dark-2: #9DB2BF;
-	--dark-3: #526D82;
-	--dark-hover: #001C30;
+	--dark-bg: #24273a;
+	--dark-1: #cad3f5;
+	--dark-2: #6e738d;
+	--dark-3: #363a4f;
+	--dark-hover: #181926;
   }
 
 html {
