--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -13,7 +13,7 @@ const { title, description, pubDate } = Astro.props;
 </head>
 
 <SectionContainer>
-	<main class="mb-auto break-words mt-4">
+	<main class="flex flex-col flex-1 mb-auto break-words mt-4">
 		<article>
 			<h1 class="text-4xl font-extrabold">{title}</h1>
 			<p class="italic">{description}</p>
