:construction: other sites under construction

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,8 +13,7 @@ import ThemeIcon from './ThemeIcon.astro';
 	</div>
 	<nav class="flex gap-2">
 		<HeaderLink href="/about">about</HeaderLink>
-		<HeaderLink href="#">projects</HeaderLink>
-		<HeaderLink href="#">resume</HeaderLink>
 		<HeaderLink href="/blog">blog</HeaderLink>
+		<HeaderLink href="/more">more</HeaderLink>
 	</nav>
 </header>
