:lipstick: small stylingfix on frontpage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import SectionContainer from '../components/SectionContainer.astro';
 	<main class="flex flex-col flex-1 justify-center items-center gap-4 description">
 		<div class="profile"></div> <!-- Image -->
 		<h1 class="text-3xl font-bold">Sindre Kjelsrud</h1>
-		<p>Student at Western University of Applied Sciences.</p>
+		<p class="text-center">Student at Western University of Applied Sciences.</p>
 		<div class="flex gap-1 social">
 			<a href="https://www.linkedin.com/in/sindre-kjelsrud-345583218/">
 				<iconify-icon icon="lucide:linkedin" width="30" height="30" />
