--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -17,7 +17,7 @@ const { title, description, image = '/placeholder-social.jpg' } = Astro.props;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+<link rel="icon" type="image/svg+xml" href="/src/static/coolkid.png" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Canonical URL -->
