--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import SectionContainer from '../components/SectionContainer.astro';
 	.profile {
             width: 10rem;
 			height: 10rem;
-            background: url("../../assets/pb.jpg");
+            background: url("/src/static/pb.jpg");
 			background-size: cover;
 			border-radius: 9999px;
         }
