--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,6 +25,10 @@ body {
 	font-family: Verdana, sans-serif;
 }
 
+p {
+	font-size: large;
+}
+
 /* HOME */
 .social a {
 	color: var(--light-1);
@@ -93,6 +97,17 @@ body {
 .blogtime { color: var(--light-2); }
 
 .dark .blogtime { color: var(--dark-2); }
+
+/* LOGS */
+.borderbottom {
+	border-bottom-width: 2px;
+	border-color: var(--light-3);
+}
+
+.dark .borderbottom {
+	border-bottom-width: 2px;
+	border-color: var(--dark-3);
+}
 
 /* RANDOM */
 code {
