--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -15,7 +15,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
             <div class="flex flex-col justify-between h-screen">
                 <Header title={SITE_TITLE} />
 
-                <slot />
+                <slot class="flex-1"/>
                 
                 <Footer />
             </div>
