--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,16 +12,16 @@ import SectionContainer from '../components/SectionContainer.astro';
 		<h1 class="text-3xl font-bold">Sindre Kjelsrud</h1>
 		<p class="text-center">Student at Western University of Applied Sciences.</p>
 		<div class="flex gap-1 social">
-			<a href="https://www.linkedin.com/in/sindre-kjelsrud-345583218/">
+			<a href="https://www.linkedin.com/in/sindre-kjelsrud-345583218/" aria-label="Link to my LinkedIn">
 				<iconify-icon icon="lucide:linkedin" width="30" height="30" />
 			</a>
-			<a href="https://github.com/SindreKjelsrud">
+			<a href="https://github.com/SindreKjelsrud" aria-label="Link to my GitHub">
 				<iconify-icon icon="ri:github-line" width="30" height="30" />
 			</a>
-			<a href="https://www.instagram.com/SindreKjelsrud/">
+			<a href="https://www.instagram.com/SindreKjelsrud/" aria-label="Link to my Instagram">
 				<iconify-icon icon="mdi:instagram" width="30" height="30" />
 			</a>
-			<a href="https://open.spotify.com/user/kjelsrud!">
+			<a href="https://open.spotify.com/user/kjelsrud!" aria-label="Link to my Spotify">
 				<iconify-icon icon="mdi:spotify" width="30" height="30" />
 			</a>
 		</div>
