:lipstick: fix some styling of footer & sectioncontainer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 const today = new Date();
 ---
 
-<footer class="flex justify-center py-5 footerbg">
+<footer class="flex justify-center py-5 mt-auto footerbg">
 	{today.getFullYear()} &copy; Sindre Kjelsrud.
 </footer>
