--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -12,7 +12,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	</head>
 	<body>
         <section class="mx-auto max-w-3xl px-4 sm:px-6 xl:max-w-2xl xl:px-0">
-            <div class="flex flex-col justify-between h-screen">
+            <div class="flex flex-col h-screen">
                 <Header title={SITE_TITLE} />
 
                 <slot class="flex-1"/>
