:bento: update profile image
Signed-off-by: Sindre Kjelsrud <kjelsrudsindre@gmail.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import SectionContainer from '../components/SectionContainer.astro';
 	.profile {
             width: 10rem;
 			height: 10rem;
-            background: url("/pb.jpg");
+            background: url("/pb.png");
 			background-size: cover;
 			border-radius: 9999px;
         }
