:speech_balloon: update Header
Signed-off-by: Sindre Kjelsrud <kjelsrudsindre@gmail.com>

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ import ThemeIcon from './ThemeIcon.astro';
 		<ThemeIcon />
 	</div>
 	<nav class="flex gap-2">
-		<HeaderLink href="/about">about</HeaderLink>
+		<HeaderLink href="/about">whoami</HeaderLink>
 		<HeaderLink href="/blog">blog</HeaderLink>
 		<HeaderLink href="/more">more</HeaderLink>
 	</nav>
