:lipstick: update colors for links
Signed-off-by: Sindre Kjelsrud <kjelsrudsindre@gmail.com>

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,13 +4,13 @@
 	--light-2: #815B5B;
 	--light-3: #9E7676;
 	--light-hover: #DAC0A3;
-	--light-link: #CD5C08;
+	--light-link: #0D47A1;
 	--dark-bg: #24273a;
 	--dark-1: #cad3f5;
 	--dark-2: #6e738d;
 	--dark-3: #363a4f;
 	--dark-hover: #181926;
-	--dark-link: #8aadf4;
+	--dark-link: #ee99a0;
   }
 
 html {
