:fire: removed and replaced png with same svg
Signed-off-by: Sindre Kjelsrud <kjelsrudsindre@gmail.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import SectionContainer from '../components/SectionContainer.astro';
 	.profile {
             width: 10rem;
 			height: 10rem;
-            background: url("/pb.png");
+            background: url("/favicon.svg");
 			background-size: cover;
 			border-radius: 9999px;
         }
